[workspace]

resolver = "2"

members = [
  "alloy_basic_example",
  "alloy_arithmetic_example",
  "alloy_nonce_manager_example",
  "alloy_connect_to_geth_example",
  "geth_transaction_json_rpc_example",
  "alloy_anvil_recommended_filters_example",
  "alloy_anvil_transaction_example",
  "alloy_contract_example",
  "alloy_contract_example2",
  "alloy_contract_example3",
]
