[workspace]

resolver = "2"

members = [
  "alloy_basic_example",
  "alloy_arithmetic_example",
  "alloy_nonce_manager_example",
  "alloy_connect_to_geth_example",
  "geth_transaction_json_rpc_example",
  "alloy_anvil_recommended_filters_example",
  "alloy_anvil_transaction_example",
  "alloy_contract_example",
  "alloy_contract_example2",
  "alloy_contract_example3",
  "alloy_contract_read_write_events_example",
  "alloy_with_required_confirmations_timeout_example",
  "alloy_string_to_u256_example",
  "alloy_abi_rpc_example",
  "alloy_compound_example",
  "counter_example",
  "weth9_example",
  "interface_abstract_example",
  "primitive_data_types",
  "forge_inspect_abi_example",
  "alloy_encrypt_account",
]
