[workspace]

resolver = "2"

members = [
        "async_stream_example",
        "stream_example1",
        "stream_example2",
        "buffer_stream_example",
        "stream_for_each_concurrent_example",
        "stream_poll_fn_example",
        "tokio_lines_stream_example",
        "tokio_yamux_stream_server_example",
        "tokio_yamux_stream_client_example",
        "stream_wrapper_example",
        "sink_asyncwrite_example",
        "sink_unfold_example",
        "tcp_yield_stream_example",
        "stream_struct_list_example",
]
