[package]
name = "autocxx_demo_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.194"
autocxx = "0.30.0"

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "7", features = ["fancy"] }
