[package]
name = "axum_auth_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
axum = "0.6.1"
axum-auth = "0.4.0"
http = "0.2.8"

request = "0.0.8"
tokio = { version = "1.22.0", features = ["full"] }
