[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.0"
serde = "1.0.130"
serde_derive = "1.0.130"
tokio = { version = "1.13.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
