[workspace]

resolver = "2"

members = [
        "axum_example1",
        # "axum_sessions_auth_example",
        "axum_example",
        "axum_server_example",
        "axum_type_safe_routing_example",
        "axum_style_magic_function_params_example",
        # "axum_login_example",
        "axum_simple_router_example",
        "axum_stream_protobuf_example",
        "axum_post_example",
        # "axum_prost_server_example",
        "reqwest_prost_client_example",
        "axum_auth_example",
        "axum_websocket_server_example",
        "axum_websocket_client_example",
        "axum_echo_example",
        "axum_handle_parameter_example",
        "axum_prost_post_echo_example",
        "axum_post_echo_json_example",
        "axum_otlp_example",
        "axum_route_service_example",
        "socketioxide_example",
]
