[package]
authors = ["Kristoffer Solberg Rakstad <kristoffer.solberg@cognite.com>"]
description = "Behavior tree examples"
edition = "2021"
name = "bonsai-examples"
repository = "https://github.com/sollimann/bonsai.git"
rust-version = "1.56.0"
version = "0.1.0"

[dependencies]
bonsai-bt = "0.3.7"
ggez = "0.7.0"
glam = "0.20.2"
kiss3d = "0.34.0"
nalgebra = { version = "0.30", features = ["rand"] }
rand = "0.8.5"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

[[bin]]
name = "3d"
path = "src/3d/main.rs"

[[bin]]
name = "boids"
path = "src/boids/main.rs"
