[package]
name = "chitchat_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
# chitchat = "0.5.0"
chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
clap = { version = "4.4.8", features = ["derive"] }
console-subscriber = "0.2.0"
cool-id-generator = "1.0.1"
env_logger = "0.10.1"
once_cell = "1.18.0"
poem = "1.3.58"
poem-openapi = { version = "3", features = ["swagger-ui"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[dev-dependencies]
