[package]
name = "coerce-cluster-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.62"
coerce = { version = "0.8.3", features = ["remote"] }
coerce-macros = "0.2.0"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"


[[bin]]
name = "worker"
path = "src/worker.rs"
