[package]
name = "deadpool_redis_once_cell_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = { version = "0.10.0", features = ["serde","rt_tokio_1"] }
once_cell = "1.8.0"
tokio = { version = "1.12.0", features = ["full"] }