[package]
name = "decode_firefox_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
lz4_flex = "0.9.3"
memmap2 = "0.5.4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
url = "2.2.2"
