[workspace]

resolver = "2"

members = [
  "rusty_v8_example",
  "rusty_v8_compile_module_example",
  "deno_core_basic_example",
  "deno_core_add_runtime_example",
  "deno_core_add_filesystem_example",
  "deno_core_impl_fetch_example",
  "deno_core_support_typescript_example",
  "build_rs_deno_core_support_typescript_example",
  "deno_runtime_example",
  "v8_promise_example",
  "deno_runtime_call_typescript_example",
  "deno_runtime_test",
  "rust_deno_scripting",
  "deno_runtime_axum_example",
  "v8_js_example",
  "deno_runtime_deno_lib_example",
  "deno_core_download_example",
  "deno_core_parse_npm_example",
  "deno_core_module_loader_example",
  "deno_core_module_loader_example2",
  "deno_node_https_example",
  "deno_node_basic_example",
  "deno_node_runtime_example",
  "deno_graph_basic_example",
  "deno_resolver_deno_npm_example",
  "deno_lib_libmainworker_example",
  "deno_web_blobstore_example",
  "deno_os_example",
  "byonm_npm_resolver_example",
  "deno_npm_example",
  "deno_cache_dir_example",
  "deno_core_call_js_example",
  "deno_core_call_js_function_example",
  "denort",
  "deno",
  "embed_deno",
]

# Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
[profile.dev.package.v8]
opt-level = 1

[profile.release.package.v8]
opt-level = 3
