[package]
name = "elasticsearch_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.14.0-alpha.1"
http = "0.2.8"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
