[workspace]

resolver = "2"

members = [
    # "ethers_u256_example",
    # "ethers_log_example",
  "ethers_decode_log_example",
  "ethers_pretty_print_example",
  "ethers_retry_endpoint_example",
  "ethers_retryclientbuilder_example",
  "ethers_retryclientbuilder_provider_example",
  "ethers_u256_hex_example",
]
