[package]
name = "excel_export_rust_dart_protobuf_message_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
