[package]
name = "ftlog_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftlog = "0.2.0"
time = { version = "0.3.34", features = ["local-offset", "formatting"] }
tokio = { version = "1.22.0", features = ["full"] }
