[package]
name = "grpc_graphql_gateway_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
grpc_graphql_gateway = "0.1.3"
prost = "0.14"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
