[workspace]

resolver = "2"

members = [
        "hyper_util_client_example",
        "hyper_util_server_example",
        "hyper_multi_server_example",
        "hyper_params_example",
        "hyper_service_struct_impl_example",
        "hyper_echo_example",
        "hyper_http1_request_example",
        "hyper_connection_graceful_shutdown_example",
]
