[workspace]

resolver = "2"

members = [
        "hyper_util_client_example",
        "hyper_util_server_example",
        "hyper_multi_server_example",
        "hyper_params_example",
        "hyper_service_struct_impl_example",
        "hyper_echo_example",
        "hyper_connection_graceful_shutdown_example",
        "hyper_upgrade_example",
        "hyper_path_tree_example",
        "delay_timer_async_example",
        "hyper_client_send_request_example",
        "hyper_client_request_channel_example",
        "http_body_trait_example",
]
